syntax = "proto3";

package yandex.cloud.events.gitlab;

import "google/rpc/status.proto";
import "google/protobuf/timestamp.proto";
import "yandex/cloud/events/common.proto";
import "yandex/cloud/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/events/gitlab;gitlab";
option java_package = "yandex.cloud.api.events.gitlab";

message CreateInstance {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  Response response = 9 [(required) = true];

  message RequestParameters {
    string folder_id = 1 [(required) = true];
    string name = 2 [(required) = true];
    map<string, string> labels = 3;
    string resource_preset_id = 4 [(required) = true];
    int64 disk_size = 5 [(required) = true];
    string admin_login = 6 [(required) = true];
    string domain_prefix = 7 [(required) = true];
    string subnet_id = 8 [(required) = true];
  }

  message EventDetails {
    string instance_id = 1 [(required) = true];
    string instance_name = 2 [(required) = true];
    string folder_id = 3 [(required) = true];
    string resource_preset_id = 5 [(required) = true];
    int64 disk_size = 6 [(required) = true];
    string status = 7 [(required) = true];
    string admin_login = 8 [(required) = true];
    string domain = 9 [(required) = true];
    string subnet_id = 10 [(required) = true];
  }
}

message UpdateInstance {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  Response response = 9 [(required) = true];

  message RequestParameters {
    string instance_id = 1 [(required) = true];
    string name = 2 [(required) = true];
    map<string, string> labels = 3;
    string resource_preset_id = 4 [(required) = false];
    int64 backup_retain_period_days = 5 [(required) = false];
  }

  message EventDetails {
    string instance_id = 1 [(required) = true];
    string instance_name = 2 [(required) = true];
    string folder_id = 3 [(required) = true];
    string resource_preset_id = 5 [(required) = true];
    int64 disk_size = 6 [(required) = true];
    string status = 7 [(required) = true];
    string admin_login = 8 [(required) = true];
    string domain = 9 [(required) = true];
    string subnet_id = 10 [(required) = true];
  }
}

message UpgradeInstance {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  Response response = 9 [(required) = true];

  message RequestParameters {
    string instance_id = 1 [(required) = true];
  }

  message EventDetails {
    string instance_id = 1 [(required) = true];
    string instance_name = 2 [(required) = true];
    string folder_id = 3 [(required) = true];
    string resource_preset_id = 5 [(required) = true];
    int64 disk_size = 6 [(required) = true];
    string status = 7 [(required) = true];
    string admin_login = 8 [(required) = true];
    string domain = 9 [(required) = true];
    string subnet_id = 10 [(required) = true];
  }
}

message RescheduleMaintenance {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  Response response = 9 [(required) = true];

  message RequestParameters {
    string instance_id = 1 [(required) = true];
    string reschedule_type = 2 [(required) = true];
    google.protobuf.Timestamp delayed_until = 3 [(required) = false];
  }

  message EventDetails {
    string instance_id = 1 [(required) = true];
    string instance_name = 2 [(required) = true];
    string folder_id = 3 [(required) = true];
    string resource_preset_id = 5 [(required) = true];
    int64 disk_size = 6 [(required) = true];
    string status = 7 [(required) = true];
    string admin_login = 8 [(required) = true];
    string domain = 9 [(required) = true];
    string subnet_id = 10 [(required) = true];
  }
}

message ScheduleUpgrade {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  Response response = 9 [(required) = true];

  message RequestParameters {
    string instance_id = 1 [(required) = true];
    google.protobuf.Timestamp delayed_until = 3 [(required) = false];
  }

  message EventDetails {
    string instance_id = 1 [(required) = true];
    string instance_name = 2 [(required) = true];
    string folder_id = 3 [(required) = true];
    string resource_preset_id = 5 [(required) = true];
    int64 disk_size = 6 [(required) = true];
    string status = 7 [(required) = true];
    string admin_login = 8 [(required) = true];
    string domain = 9 [(required) = true];
    string subnet_id = 10 [(required) = true];
  }
}

message BackupInstance {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  Response response = 9 [(required) = true];

  message RequestParameters {
    string instance_id = 1 [(required) = true];
  }

  message EventDetails {
    string instance_id = 1 [(required) = true];
    string instance_name = 2 [(required) = true];
    string folder_id = 3 [(required) = true];
    string resource_preset_id = 5 [(required) = true];
    int64 disk_size = 6 [(required) = true];
    string status = 7 [(required) = true];
    string admin_login = 8 [(required) = true];
    string domain = 9 [(required) = true];
    string subnet_id = 10 [(required) = true];
  }
}

message DeleteInstance {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  Response response = 9 [(required) = true];

  message RequestParameters {
    string instance_id = 1 [(required) = true];
  }

  message EventDetails {
    string instance_id = 1 [(required) = true];
    string instance_name = 2 [(required) = true];
    string folder_id = 3 [(required) = true];
    string resource_preset_id = 5 [(required) = true];
    int64 disk_size = 6 [(required) = true];
    string status = 7 [(required) = true];
    string admin_login = 8 [(required) = true];
    string domain = 9 [(required) = true];
    string subnet_id = 10 [(required) = true];
  }
}

message StartInstance {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  Response response = 9 [(required) = true];

  message RequestParameters {
    string instance_id = 1 [(required) = true];
  }

  message EventDetails {
    string instance_id = 1 [(required) = true];
    string instance_name = 2 [(required) = true];
    string folder_id = 3 [(required) = true];
    string resource_preset_id = 5 [(required) = true];
    int64 disk_size = 6 [(required) = true];
    string status = 7 [(required) = true];
    string admin_login = 8 [(required) = true];
    string domain = 9 [(required) = true];
    string subnet_id = 10 [(required) = true];
  }
}

message StopInstance {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  Response response = 9 [(required) = true];

  message RequestParameters {
    string instance_id = 1 [(required) = true];
  }

  message EventDetails {
    string instance_id = 1 [(required) = true];
    string instance_name = 2 [(required) = true];
    string folder_id = 3 [(required) = true];
    string resource_preset_id = 5 [(required) = true];
    int64 disk_size = 6 [(required) = true];
    string status = 7 [(required) = true];
    string admin_login = 8 [(required) = true];
    string domain = 9 [(required) = true];
    string subnet_id = 10 [(required) = true];
  }
}

message CreateInstanceBackup {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  Response response = 9 [(required) = true];

  message RequestParameters {
    string instance_id = 1 [(required) = true];
  }

  message EventDetails {
    string instance_id = 1 [(required) = true];
    string instance_name = 2 [(required) = true];
    string folder_id = 3 [(required) = true];
    string resource_preset_id = 5 [(required) = true];
    int64 disk_size = 6 [(required) = true];
    string status = 7 [(required) = true];
    string admin_login = 8 [(required) = true];
    string domain = 9 [(required) = true];
    string subnet_id = 10 [(required) = true];
  }
}

message RestoreInstanceBackup {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  Response response = 9 [(required) = true];

  message RequestParameters {
    string instance_id = 1 [(required) = true];
    string backup_id = 2 [(required) = true];
  }

  message EventDetails {
    string instance_id = 1 [(required) = true];
    string instance_name = 2 [(required) = true];
    string folder_id = 3 [(required) = true];
    string resource_preset_id = 5 [(required) = true];
    int64 disk_size = 6 [(required) = true];
    string status = 7 [(required) = true];
    string admin_login = 8 [(required) = true];
    string domain = 9 [(required) = true];
    string subnet_id = 10 [(required) = true];
  }
}
